finaliser 1st 2 chapters

--- a/parts/dataVis.tex
+++ b/parts/dataVis.tex
@@ -115,3 +115,7 @@ It is also used to feed data warehouses. This approach does not replace ETL.
 \end{itemize}
 
 \input{Tables/chapter2/Integration_Approaches_comparaison.tex}
+
+\section{Conclusion}
+In this chapter, we went through the definition of Information visualization, presenting the visualization pipeline process, then moving to the data warehouse and its different data integration approaches.\\
+In the next chapter, we present our contribution based on the different concepts we have already seen in the previous chapters.
