--- a/parts/introduction.tex
+++ b/parts/introduction.tex
@@ -31,16 +31,21 @@ Health Data Management is the practice of making sense of this data and managing
 
 \section{Purpose \& delimitations}
 
-The goal of this work is to design a visualization system for medical data in a conventional common language between the different health actors. 
+The goal of this work is to design a visualization system for medical data in a conventional common language between the different health actors.
+ 
+We intend to achieve our goal by designing a warehouse system that brings  data from different sources together, and structures it using the eXtensible Markup Language (XML).
+ \newline
+ \textbf{First}, we created a data warehouse that takes care of the data integration.\newline 
+ \textbf{Second}, we integrated the focus data in a structured form using XML.\newline
+ \textbf{Third}, we designed a visual presentation after the data processing and formatting.
 
-We intend to achieve our goal by designing a
-
-First, the implementation 
-
-second ..
-
-Third .... (this section wont be long)
 \section{Document structure}
-This document is presented in n chapters
-
-startig with chapter 1 ....
+This document is presented in 6 chapters, starting with the chapter1: Introduction, in which we present a bit of background of the topic and then delve into formally defining the problem we intend to tackle, followed by a brief description of what lies within and beyond the scope of this work.
+ 
+In Chapter 2: Health sector \& Data, we present the healthcare environment including the principal actors, activities, and the type of data generated from each one. Then we presented the Medical records management and its various electronic types and how important security is to them.
+ 
+In chapter 3: Information Visualization, we present its definition, then we explain the visualization pipeline: how it deals with data, then we move to the data warehouse and its data integration approaches.
+ 
+ Next comes chapter 4: Contribution \& Discussion, we talk about the work objectives then we go through several related work reviews and then present the proposed work. Chapter 5: Implementation, a chapter about the implementation of the system, which tools are introduced and results are displayed using screenshots and diagrams.
+ 
+Finally, in chapter 5: Conclusion \& Future work, the results and insights gained through the journey of making the proposed solution, few conclusions drawn and perspectives on what could be enhanced moving forward with this project.
