--- a/biblo.bib
+++ b/biblo.bib
@@ -518,3 +518,86 @@ url="https://doi.org/10.1007/978-3-319-21569-3_9"
   year={2019},
   publisher={USTO University}
 }
+
+@article{achard2001xml,
+  title={XML, bioinformatics and data integration},
+  author={Achard, Frederic and Vaysseix, Guy and Barillot, Emmanuel},
+  journal={Bioinformatics},
+  volume={17},
+  number={2},
+  pages={115--125},
+  year={2001},
+  publisher={Oxford University Press}
+}
+@article{thuy2012s,
+  title={S-Trans: Semantic transformation of XML healthcare data into OWL ontology},
+  author={Thuy, Pham Thi Thu and Lee, Young-Koo and Lee, Sungyoung},
+  journal={Knowledge-Based Systems},
+  volume={35},
+  pages={349--356},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@misc{WelcomePythonOrg,
+  title = {Welcome to {{Python}}.Org},
+  journal = {Python.org},
+  abstract = {The official home of the Python Programming Language},
+  howpublished = {https://www.python.org/},
+  langid = {english},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\69T32GEV\\www.python.org.html}
+}
+
+@misc{PythonLangageWikipedia,
+  title = {Python (Langage) \textemdash{} {{Wikip\'edia}}},
+  howpublished = {https://fr.wikipedia.org/wiki/Python\_(langage)},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\J4E5ECZS\\Python_(langage).html}
+}
+@misc{PandasPythonData,
+  title = {Pandas - {{Python Data Analysis Library}}},
+  howpublished = {https://pandas.pydata.org/},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\WMHN2KMF\\pandas.pydata.org.html}
+}
+@article{Pandas2020,
+  title = {{Pandas}},
+  year = {2020},
+  month = jun,
+  journal = {Wikip\'edia},
+  abstract = {Pandas est une biblioth\`eque \'ecrite pour le langage de programmation Python permettant la manipulation et l'analyse des donn\'ees. Elle propose en particulier des structures de donn\'ees et des op\'erations de manipulation de tableaux num\'eriques et de s\'eries temporelles. Pandas est un logiciel libre sous licence BSD. Les principales structures de donn\'ees sont les s\'eries (pour stocker des donn\'ees selon une dimension - grandeur en fonction d'un index), les DataFrames (pour stocker des donn\'ees selon 2 dimensions - lignes et colonnes), les Panels (pour repr\'esenter des donn\'ees selon 3 dimensions, les Panels4D ou les DataFrames avec des index hi\'erarchiques aussi nomm\'es MultiIndex (pour repr\'esenter des donn\'ees selon plus de 3 dimensions - hypercube)},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  langid = {french},
+  annotation = {Page Version ID: 172173577},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\E9CR3KMR\\index.html}
+}
+
+@article{mehdiPfe,
+  title={Intégration continue dans un projet decisionnel au sein de la cnl},
+  author={Benmohamed Aek El Mehdi},
+  pages={1--73},
+  year={2018},
+  publisher={USTO University}
+}
+
+@misc{TalendOpenStudio,
+  title = {{Talend Open Studio for Data Integration}},
+  abstract = {L'\'editeur d\'ecisionnel ETL Talend Open Studio est une solution open source d'int\'egration de donn\'ees. Notre \'equipe vous conseille et vous forme sur cet \'editeur.},
+  howpublished = {https://www.next-decision.fr/editeurs-bi/etl/talend-open-studio},
+  langid = {french},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\DG6UE6SF\\talend-open-studio.html}
+}
+@misc{WhatTableauUltimate,
+  title = {What Is {{Tableau}}: {{The Ultimate Guide To Know All About Tableau}} in 2021},
+  shorttitle = {What Is {{Tableau}}},
+  journal = {Simplilearn.com},
+  abstract = {Tableau is a powerful, secure, and fastest-growing visual analytics platform. Learn \ding{52}️ what is tableau \ding{52}️ its features \ding{52}️product suite, and much more now!},
+  howpublished = {https://www.simplilearn.com/tutorials/tableau-tutorial/what-is-tableau},
+  langid = {american},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\LR44UY6I\\what-is-tableau.html}
+}
+@misc{InteractiveJavascriptCharts,
+  title = {Interactive Javascript Charts Library},
+  journal = {Highcharts},
+  abstract = {Javascript library to create interactive charts for web and mobile projects. Build data visualization with Angular, React, Python, R, .Net, PHP, Java, iOS, and Android.},
+  langid = {american},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\VBUZDIEE\\www.highcharts.com.html}
+}
