--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,9 @@
 }
 
 
+\usepackage[font=small,labelfont=bf]{caption}
+\def\figurename{\textbf{Figure }}
+
 \hypersetup{
 pdftitle={VISUALIZATION OF HEALTH DATA IN A MEDICAL SECTOR},
 pdfsubject={Master Graduation Project},
