--- a/parts/Implementation.tex
+++ b/parts/Implementation.tex
@@ -37,7 +37,7 @@ We used  Talend Open Studio to create and develop ETL processes. It is a tool ba
 \item Apply aggregate functions on them.
 \item Sort them.
 \end{itemize}
-\item to organize data flows.
+\item To organize data flows.
 \end{itemize}
 These components are then assembled as needed to design ETL processes\cite{mehdiPfe}.
 \begin{figure}[h!]
@@ -73,4 +73,37 @@ To validate the proposed solution, we visualize the data  using various technolo
 After the data cleansing using python and its libraries, and the data processing using Talend, we got these results:
 
 
+\begin{figure}[h!]
+    \center
+    \includegraphics[width=0.90\textwidth]{images/chapter4/result1.PNG}
+    \caption{Patient Informations and the related drugs.}
+    \label{fig:resultone}
+\end{figure}
+\begin{figure}[h!]
+    \center
+    \includegraphics[width=0.90\textwidth]{images/chapter4/result2.PNG}
+    \caption{Patient's diagnosis and the his Lab tests results.}
+    \label{fig:resulttwo}
+\end{figure}
 
+\subsection{Dashboards}
+The presented dashboards illustrate some different ways we can visualize some relevant patient data we obtained.\\
+Both dashboards are a web application developed using bootstrap\cite{IntroductionBootstrapV5}  framework and the Highcharts  library.
+
+\begin{itemize}
+    \item \textbf{Administration Dashboard:}
+     \begin{figure}[h!]
+        \center
+        \includegraphics[width=0.90\textwidth]{images/chapter4/adminDashboard.PNG}
+        \caption{Administration Dashboard illustrates some of Viz results.}
+        \label{fig:admin}
+    \end{figure}
+    \newpage
+    \item \textbf{Doctor Dashboard:}
+    \begin{figure}[h!]
+        \center
+        \includegraphics[width=0.90\textwidth]{images/chapter4/doctor.PNG}
+        \caption{Doctor Dashboard.}
+        \label{fig:doctor}
+    \end{figure}
+\end{itemize}
