--- a/parts/contribution.tex
+++ b/parts/contribution.tex
@@ -98,10 +98,10 @@ We focused on extracting the following type of data (each head represents an XML
 \end{figure}
 \newpage
 \subsection{Data Integration \& Processing}
-%TODO: ref to talend in tools
+
 Our main objective was to create a visualization system for that: we collected medical data from different sources that represent various medical actors, and we process them following the visualization process mentioned before (\ref{fig:infovispipeline}), we used Talend open studio (\ref{sec:talend}) to handle this step.
 
-The resulting data will be used as a source to feed all the components of the digital marketing reporting applications that are built in Tableau Software (\ref{sec:tableau}).
+The resulting data will be used as a source to feed all the components of the digital marketing reporting applications that are built in many visualization tools.
 \begin{figure}[h!]
   \center
   \includegraphics[width=0.30\textwidth]{images/chapter3/jobInputs.PNG}
