--- a/parts/introduction.tex
+++ b/parts/introduction.tex
@@ -1,6 +1,7 @@
 
 \chapter{Introduction}
 
+
 Health has played an important role in human history, helping civilization, behind the curtains, to evolve into the society of today\cite{xu2020privacy}. Recently, the healthcare sector has witnessed the development of a wide range of IoT devices and applications\cite{nasiri2019security}. And a new field has been unlocked: Healthcare information technology (HIT).
 
 \section{Background}
@@ -39,6 +40,7 @@ We intend to achieve our goal by designing a warehouse system that brings  data 
  \textbf{Second}, we integrated the focus data in a structured form using XML.\newline
  \textbf{Third}, we designed a visual presentation after the data processing and formatting.
 
+ \newpage
 \section{Document structure}
 This document is presented in 6 chapters, starting with the chapter1: Introduction, in which we present a bit of background of the topic and then delve into formally defining the problem we intend to tackle, followed by a brief description of what lies within and beyond the scope of this work.
  
