--- a/main.tex
+++ b/main.tex
@@ -28,8 +28,7 @@
 pdftitle={VISUALIZATION OF HEALTH DATA IN A MEDICAL SECTOR},
 pdfsubject={Master Graduation Project},
 pdfauthor={Benzerga Malek kheira},
-%TODO: keywords
-pdfkeywords={}
+pdfkeywords={Visualization; Medical data; Graphical Representation; Modeling; XML}
 }
 
 %		Header		%		
@@ -38,9 +37,19 @@ pdfkeywords={}
 \rhead{\thepage}
 \lhead{\leftmark}
 
+%%%%%%%%%%%%%%%%%%%%
+\providecommand{\keywordEN}[1]{\textbf{\textit{Keywords---}} #1}
+
+\providecommand{\keywordFR}[1]{\textbf{\textit{Mots clés---}} #1}
+
+\providecommand{\keywords}[1]{\textbf{\textit{Mots clés---}} #1}
+\providecommand{\keywordz}[1]{\textbf{\textit{Keywords---}} #1}
+%%%%%%%%%%%%%%%%%%%%%%%
+
+
 \begin{document}
 
-
+\input{parts/abstract.tex}
 \tableofcontents
 \listoffigures
 \listoftables 
