--- a/parts/abstract.tex
+++ b/parts/abstract.tex
@@ -19,10 +19,10 @@
         
         La prise en charge des patients dans une structure médicale est assurée par du personnel médical et paramédical. La coordination entre le personnel impliqué dans les soins nécessite une communication efficace et synchronisée. La présence de représentations visuelles dans cette communication ajoute une dimension aux données qui peut améliorer la lecture de ces données, leurs interprétations, et ainsi accélérer le temps de réponse. L'objectif de ce sujet est de concevoir un système de visualisation des données médicales dans un langage commun conventionnel entre les différents acteurs de santé. \newline 
 
-        \begin{keywordEN}
+        \begin{keywords}
             Visualisation; Données médicales ; Représentation graphique; La modélisation; XML.\\
             
-        \end{keywordEN}
+        \end{keywords}
         
     \end{abstract}
 \end{selectlanguage}
